--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cobalt2-syntax",
+  "name": "snowbalt2-syntax",
   "theme": "syntax",
-  "version": "0.4.0",
-  "description": "An Atom theme based on our old blue friend cobalt.",
-  "repository": "https://github.com/wesbos/cobalt2-atom",
+  "version": "0.1.0",
+  "description": "An Atom theme based on Cobalt2 but inverted.",
+  "repository": "https://github.com/wldcordeiro/snowbalt2-atom",
   "license": "MIT",
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
@@ -11,7 +11,10 @@
   "keywords": [
     "cobalt",
     "cobalt2",
+    "snowbalt",
+    "snowbalt2",
     "syntax",
+    "light",
     "theme"
   ]
 }
